# kimchi-ros2

./: .gitignore  README.md  ruff.toml
andino_base/src/: diffdrive_andino.cpp  motor_driver.cpp
andino_bms/: CMakeLists.txt  README.MD  package.xml
andino_bms/include/andino_bms/: andino_bms.h
andino_bms/src/: andino_bms.cpp
andino_control/: package.xml
andino_description/: README.md
andino_description/config/andino/: base.yaml
andino_description/launch/: andino_description.launch.py  view_andino.launch.py
andino_description/urdf/: andino.urdf.xacro  andino_w_battery.urdf.xacro
andino_description/urdf/include/: common_macros.urdf.xacro
andino_gazebo/: README.MD  package.xml
andino_gazebo/launch/: andino_gazebo_navigation.launch.py  andino_gazebo_slam.launch.py  andino_one_robot.launch.py  spawn_robot.launch.py
andino_gazebo/urdf/: andino.gazebo.xacro  andino_w_battery.gazebo.xacro
andino_gazebo/worlds/: HQ_world.sdf  hq_world.sdf
andino_gz/: package.xml
andino_gz/launch/: andino_gz.launch.py
andino_gz/launch/include/: spawn_robot.launch.py
andino_gz/urdf/: kimchi_gz.urdf.xacro
andino_gz/urdf/include/: kimchi_materials.xacro
andino_interfaces/: CMakeLists.txt  package.xml
andino_interfaces/action/: Dock.action
andino_interfaces/srv/: SetBattery.srv
andino_navigation/: CMakeLists.txt  README.MD  behavior_plugin.xml  package.xml
andino_navigation/include/battery_observer/: battery_observer.h
andino_navigation/include/behaviors/: dock.hpp
andino_navigation/launch/: andino_navigation.launch.py  andino_slam.launch.py
andino_navigation/maps/hq_map/: map.pgm  map.yaml
andino_navigation/rviz/: andino_navigation.rviz
andino_navigation/src/: battery_observer.cpp  dock.cpp
docker/: Dockerfile  build.sh  docker-compose.yaml  dockerfile  requirements.txt  run.sh
docker/files/: external_source_dependencies.repos
docker/humble/: Dockerfile
docker/jazzy/: Dockerfile
kimchi/: CMakeLists.txt  package.xml
kimchi/config/: nav2_params.yaml
kimchi/launch/: bringup.launch.py
kimchi_bringup/: CMakeLists.txt  README.MD  package.xml
kimchi_bringup/launch/: bringup_simulation.launch.py
kimchi_description/: CMakeLists.txt  README.md  package.xml
kimchi_description/config/kimchi/: base.yaml  caster_wheel.yaml  sensors.yaml  wheel.yaml
kimchi_description/launch/: kimchi_description.launch.py  kimchi_rviz.launch.py
kimchi_description/meshes/components/: wheel.stl
kimchi_description/meshes/kimchi/: caster_base.stl  caster_wheel.stl  caster_wheel_support.stl  chassis.stl
kimchi_description/rviz/: kimchi_description.rviz
kimchi_description/urdf/: kimchi.urdf.xacro
kimchi_description/urdf/include/: common_macros.urdf.xacro  (+3 more)
kimchi_go_for_a_walk/: CMakeLists.txt  package.xml
kimchi_go_for_a_walk/config/: hq4_simulated_poses.yaml
kimchi_go_for_a_walk/launch/: main.launch.py
kimchi_grpc_server/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
kimchi_grpc_server/kimchi_grpc_server/: grpc_bridge_node.py  kimchi_grpc_server.py  kimchi_pb2.py  kimchi_pb2_grpc.py  map_info.py  pose_2d.py  robot_state.py
kimchi_grpc_server/launch/: kimchi_grpc_server.launch.py
kimchi_interfaces/: CMakeLists.txt  package.xml
kimchi_interfaces/action/: Localizing.action  MapInfo.action
kimchi_interfaces/msg/: RobotState.msg
kimchi_interfaces/srv/: AddGoalToMission.srv  MapInfo.srv
kimchi_map/: README.md  package.xml  setup.cfg  setup.py
kimchi_map/kimchi_map/: kimchi_map_handler.py  map_info.py
kimchi_navigation/: CMakeLists.txt  README.MD  package.xml
kimchi_navigation/include/kimchi_navigation/: global_localization.hpp  localization_movement_controller.hpp
kimchi_navigation/launch/: amcl_localization.launch.py  auto_localization.launch.py  kimchi_nav_and_slam.launch.py  kimchi_navigation.launch.py  kimchi_slam.launch.py
kimchi_navigation/maps/hq_map/: map.pgm  map.yaml
kimchi_navigation/params/: nav2_params.yaml
kimchi_navigation/src/: amcl_global_trigger_correct.cpp  amcl_initial_pose_trigger.cpp  global_localization.cpp  initial_pose_estimator.cpp  localization_movement_controller.cpp
kimchi_navigation_configurations/: CMakeLists.txt  package.xml
kimchi_navigation_configurations/configurable_nav2_params/: configurable_nav2_params.yaml
kimchi_state/: CMakeLists.txt  README.MD  package.xml
kimchi_state/include/kimchi_state/: kimchi_state_server.h  map_info.h  navigation_manager.h  point_2d.h
kimchi_state/launch/: kimchi_bring_up.launch.py
kimchi_state/src/: kimchi_state_server.cpp  navigation_manager.cpp
tutorials/abc_gazebo_plugins/: CMakeLists.txt  package.xml
tutorials/abc_gazebo_plugins/include/abc_gazebo_plugins/: abc_sample_plugin.h
tutorials/abc_gazebo_plugins/src/: abc_sample_plugin.cpp
tutorials/abc_gazebo_worlds/: CMakeLists.txt  package.xml
tutorials/abc_gazebo_worlds/dynamic_worlds/: .gitignore  abc_dynamic_world.world.erb
tutorials/abc_gazebo_worlds/env-hooks/: abc_gazebo_worlds.dsv.in
tutorials/abc_gazebo_worlds/launch/: launch_abc_world.launch.py  launch_dynamic_abc_world.launch.py
tutorials/abc_gazebo_worlds/models/lamp_post/: model.config  model.sdf
tutorials/abc_gazebo_worlds/models/sample_model/: model.config  model.sdf
tutorials/abc_gazebo_worlds/worlds/: abc_world.world
tutorials/abc_rostest_sample/: CMakeLists.txt  package.xml
tutorials/abc_rostest_sample/test/: gazebo_ros_connection_test.py
tutorials/abc_sample_spawns/: CMakeLists.txt  package.xml
tutorials/abc_sample_spawns/launch/: spawn_robots.launch  spawn_robots.py
tutorials/abc_sample_spawns/sdf/: rrbot.sdf
tutorials/abc_sample_spawns/urdf/: rrbot.urdf  rrbot.urdf.xacro
tutorials/cpp_pubsub/: CMakeLists.txt  package.xml
tutorials/cpp_pubsub/launch/: test_example.launch.py
tutorials/cpp_pubsub/src/: listener.cpp  talker.cpp
tutorials/cpp_pubsub/test/: test_example.cpp
tutorials/py_pubsub/: launch_testing_ros_pytest_entrypoint.py  package.xml  pytest.ini  setup.py
tutorials/py_pubsub/py_pubsub/: listener.py  talker.py
tutorials/py_pubsub/test/: talker_listener_test.py
(+72 files in other folders)
