<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kimchi_bringup</name>
  <version>0.0.1</version>
  <description>
    <p>Bringup package for the Kimchi robot.</p>
    <p>This package provides launch files and configurations to bring up the Kimchi robot in a ROS 2 environment.</p>
    <p>It includes necessary dependencies and configurations for the robot's navigation and state management.</p>
  </description>
  <maintainer email="arilow@ekumenlabs.com">Ari Lowy</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>andino_gz</depend>
  <depend>kimchi_state</depend>
  <depend>kimchi_grpc_server</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
