<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kimchi_state</name>
  <version>0.0.1</version>
  <description>
    Node that handles the state of the robot.
  </description>
  <maintainer email="arilow@ekumenlabs.com">Ari Lowy</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kimchi_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav2_lifecycle_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
