<?xml version="1.0"?>
<package format="3">
  <name>abc_gazebo_plugins</name>
  <version>0.1.0</version>
  <description>
    Sample gazebo plugins package for the ABC repository
  </description>
  <maintainer email="repos@ekumenlabs.com">Ekumen Repository Management</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <!-- Required export tag to find the plugins from sdf/urdf -->
    <gazebo plugin_path="${prefix}/lib"/>
  </export>

</package>
