<?xml version="1.0"?>
<package format="3">
  <name>abc_gazebo_worlds</name>
  <version>0.1.0</version>
  <description>Sample worlds package</description>
  <maintainer email="repos@ekumenlabs.com">Ekumen Repository Management</maintainer>
  <license>MIT</license>
  <exec_depend>gazebo_ros</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <!-- Required export tag to find models by using <uri>model://model_name</uri> -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
