<?xml version="1.0"?>
<package format="2">
  <name>cpp_pubsub</name>
  <version>0.1.0</version>
  <description>Example C++ ROS package</description>
  <maintainer email="repos@ekumenlabs.com">Ekumen Repository Management</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- ament -->
  <depend>ament_cmake_gtest</depend>
  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>

  <!-- ROS launch -->
  <depend>launch_testing</depend>
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
